# releez

./: .actrc  .codecov.yml  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEEZ_ACTION_DESIGN.md  action.yaml  cliff.toml  lefthook.yml  mise.toml  mkdocs.yaml  poe_tasks.toml  pyproject.toml
.claude-docs/: action-development.md  code-style.md  design-principles.md  linting-testing.md  monorepo-design.md  testing-practices.md
.github/tests/: test-action-finalize.yaml  test-action-guard.yaml  test-action-validate.yaml  test-action-version-artifact.yaml
.github/workflows/: ci-checks.yaml  ci-checks.yml  deploy-docs.yaml  finalize-release.yaml  lint-pr-title.yaml  start-release.yaml  validate-release.yaml
docs/: action.md  changelog-regenerate.md  index.md  monorepo-design.md  monorepo-setup.md  post-changelog-hooks.md  support-branches.md  workflow-recipes.md
docs/configuration/: hooks.md  settings.md
docs/github-actions/: action.md  workflow-recipes.md
docs/monorepo/: design.md  setup.md
examples/: monorepo-config.toml  post-changelog-hooks.toml
src/releez/: __init__.py  artifact_version.py  cli.py  cli_utils.py  cliff.py  console.py  errors.py  git_repo.py  github.py  process.py  release.py  settings.py  subproject.py  utils.py  version_tags.py
tests/: conftest.py  invoke_helper.py
tests/action/: test-action-finalize-config-alias.yaml  test-action-finalize-maintenance-monorepo.yaml  test-action-finalize-maintenance.yaml  test-action-finalize-monorepo.yaml  test-action-finalize-notes-ordering.yaml  test-action-finalize-single-repo.yaml  (+14 more)
(+45 files in other folders)
